--- a/oltu_tasi/.obsidian/app.json
+++ b/oltu_tasi/.obsidian/app.json
@@ -1,7 +1,8 @@
 {
   "pdfExportSettings": {
+    "includeName": true,
     "pageSize": "Letter",
-    "landscape": false,
+    "landscape": true,
     "margin": "0",
     "downscalePercent": 100
   }
