--- a/oltu_tasi/.obsidian/app.json
+++ b/oltu_tasi/.obsidian/app.json
@@ -7,5 +7,7 @@
     "downscalePercent": 100
   },
   "alwaysUpdateLinks": true,
-  "vimMode": false
+  "vimMode": false,
+  "readableLineLength": true,
+  "showLineNumber": false
 }
