nginx, javascript and bash script are modified also PHP is inserted

--- a/oltu_tasi/.obsidian/app.json
+++ b/oltu_tasi/.obsidian/app.json
@@ -9,5 +9,5 @@
   "alwaysUpdateLinks": true,
   "vimMode": false,
   "readableLineLength": true,
-  "showLineNumber": false
+  "showLineNumber": true
 }
