nginx, php and python are modified also Benchmark araçı is loaded

--- a/oltu_tasi/.obsidian/app.json
+++ b/oltu_tasi/.obsidian/app.json
@@ -8,6 +8,6 @@
   },
   "alwaysUpdateLinks": true,
   "vimMode": false,
-  "readableLineLength": true,
+  "readableLineLength": false,
   "showLineNumber": true
 }
